--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media-recorder": "^1.6.5",
+    "react-record-webcam": "^1.1.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-video-recorder": "^3.19.3",
     "react-webcam": "^7.2.0",
     "typescript": "^4.9.5",
+    "v": "^0.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-video-recorder": "^3.19.3",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1"
