--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@vidstack/player": "^0.13.3",
+    "@vidstack/react": "^1.11.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-media-recorder": "^1.6.5",
+    "react-player": "^2.16.0",
     "react-record-webcam": "^1.1.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
